--- a/views/home.html
+++ b/views/home.html
@@ -8,30 +8,33 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3 col-sm-offset-2 col-sm-8 col-xs-offset-1 col-xs-10 mt-2 panel">
       <div class="panel-body">
-        <div class="mb-1">
+        <div class="mb-1 ps-3">
+
           <h1 class="mb-0 mt-05  text-center"><i class="icon icon-hull" style="font-size:64px;"></i></h1>
-          <div class="mb-1 media ps-4 pb-1">
+
+          <div class="mb-1 media pb-1">
             <div class="media-left">
               <div class="media-object pr-1 pt-1">
                 <div class="check valid"><i class="icon icon-valid"></i></div>
               </div>
             </div>
             <div class="media-body pt-1">
-              <span class='pull-right'><a href="<%=urls.home%>&reset=true" class='btn btn-rounded btn-pill btn-secondary'>Start over</a></span>
+              <span class="pull-right"><a href="<%=urls.home%>&reset=true" class="btn btn-rounded btn-pill btn-secondary">Start over</a></span>
               <h4 class="m-0 pt-05 text-muted">Connected to <%=name%></h4>
             </div>
           </div>
-          <div class="mb-1 media ps-4 pb-1">
-            <div data-href="/fetchAll" class="btn btn-rounded btn-pill btn-primary center-block">Fetch All Contacts</div>
-            <% if (settings.last_fetch_started_at) { %>
-              <%=settings.is_fetch_completed%>
-              <% if (settings.is_fetch_completed) { %>
-                <p>Last fetch all operation started <span data-time>placeholder</span> and processed all <%=settings.fetch_count || 0%> contacts.</a>
-              <% } else { %>
-                <p>Last fetch all operation started <span data-time>placeholder</span> and already processed <%=settings.fetch_count || 0%> contacts.</a>
-              <% } %>
-            <% } %>
+
+          <% if (settings.last_fetch_started_at) { %>
+          <h5>Last Sync <small class="pull-right"><strong><%=settings.fetch_count || 0%> Users</strong> on <span data-time>Friday, September 8 @ 12h30</span></small></h5>
+          <% } %>
+
+          <hr>
+
+          <div class="">
+            <div data-href="/fetchAll" class="pull-right btn btn-rounded btn-pill btn-primary">Fetch All Contacts</div>
+            <strong>Connected to portal <a href="https://app.hubspot.com/dashboard/<%=settings.portal_id%>" target="_blank"><%=settings.portal_id%></a></strong>
           </div>
+
         </div>
       </div>
     </div>
@@ -84,7 +87,7 @@
   <script>jQuery(function($) {
     var time = "<%=settings.last_fetch_started_at%>";
     if (time) {
-      $("[data-time]").text(moment("<%=settings.last_fetch_started_at%>").fromNow());
+      $("[data-time]").text(moment("<%=settings.last_fetch_started_at%>").format("dddd[,] MMMM D [@] H[h]mm"));
     }
   });</script>
 </body>
